"""
bimg - Image library, fork of https://github.com/bkaradzic/bimg.
"""

module(
    name = "bimg",
    version = "1.0.0",
    bazel_compatibility = [">=9.0.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "bx", version = "1.0.0")

git_override(
    module_name = "bx",
    commit = "0652d5e3382899f13686e66c538afb1d96b3ca56",
    remote = "https://github.com/cdbarrett/bx.git",
)

# local_path_override(
#     module_name = "bx",
#     path = "../bx",
# )
