load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "texturec",
    srcs = glob(["*.cpp"]),
    copts = ["-march=native"],
    cxxopts = ["-std=c++20"],
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
    deps = [
        "//:bimg",
        "//:bimg-decode",
        "//:bimg-encode",
        "@bx",
    ],
)
